--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! i am krishna vyas!This is my first webapp.
+            Hi! i am krishna vyas!This is my first website.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
