[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! i am krishna vyas!This is my first website.
-        </div>
+            <h4>hello!  </h4>
+            </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
