[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! i am krishna vyas!This is my first website.
             <h4>hello!  </h4>
+            <h1> im krishna </h1>
             </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
