[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! i am krishna vyas!This is my first website.
-            <h4>hello!  </h4>
-            <h1> im krishna </h1>
+            happy birthday my love!!
             </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
