[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://s-media-cache-ak0.pinimg.com/avatars/niks2727_1440104512_140.jpg"/>
         </div>
         <br>
         <div class="center text-big bold">
