[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://s-media-cache-ak0.pinimg.com/avatars/niks2727_1440104512_140.jpg"/>
+            <img src="http://cdn3.volusion.com/rccqg.lrbyh/v/vspfiles/photos/BQPKCN10-2.jpg?1455343631"/>
         </div>
         <br>
         <div class="center text-big bold">
