--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
     <head>
+        <title> Bon anniversaire </title>
+
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
