--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
             <img src="http://cdn3.volusion.com/rccqg.lrbyh/v/vspfiles/photos/BQPKCN10-2.jpg?1455343631"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div style= "font size: 40px" class="center text-big bold" >
             happy birthday my love!!
             </div>
         <script type="text/javascript" src="/ui/main.js">
