--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <h1>
+        <h1 style ="color:red ; font-size: 60px">
             happy birthday!!!
         </h1>
     </body>
