[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,6 @@
 <html>
-    <head>
+    <head> <title>feliz cumpleaños | Spanish
+</title>
     </head>
     <body>
         <h1 style ="color:red ; font-size: 60px">
