[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,11 +1,14 @@
 <html>
     <head> <title>feliz cumpleaños | Spanish
 </title>
-    <a href="http://krishnavyas9.imad.hasura-app.io/">home</a>
     </head>
     <body>
+        <div>
+                <a href="http://krishnavyas9.imad.hasura-app.io/">home</a>
+
         <h1 style ="color:red ; font-size: 60px">
             happy birthday!!!
         </h1>
+        </div>
     </body>
 </html>
