[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,5 @@
 <html>
-    <head> <title>feliz cumpleaños | Spanish
+    <head> <title>buon compleanno | italian
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
