--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <div>
+        <div style ="background : yellow; font-size: 40px ; font-family: impact">
                 <a href="http://krishnavyas9.imad.hasura-app.io/">home</a>
                 </div>
 
