[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
         <div style= " color:green ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
+            <div>
+                <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click here</a>
+                </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
