--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
             <img src="http://cdn3.volusion.com/rccqg.lrbyh/v/vspfiles/photos/BQPKCN10-2.jpg?1455343631"/>
         </div>
         <br>
-        <div style="color: white; font-aligned: center; font-size: 30px"> you can click on the image too! :D </div>
+        <div style="color: white; text-align: center; font-size: 30px"> you can click on the image too! :D </div>
         <div style= " color: black ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
