[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,11 +10,10 @@
             <img src="http://cdn3.volusion.com/rccqg.lrbyh/v/vspfiles/photos/BQPKCN10-2.jpg?1455343631"/>
         </div>
         <br>
-        <div style="color: white; text-align: center; font-size: 30px"> you can click on the image too! :D </div>
         <div style= " color: black ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
-            <div>
+            <div style="text-align : right; text-family : Arial">
                 <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click here</a>
                 </div>
         <script type="text/javascript" src="/ui/main.js">
