--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,9 @@
                 </div>
 
         <p style ="color:black ; font-size: 60px; text-aign:left">
-            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you're might be angry or too happy to express your feeling..you'll probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually don't have a lot of time! anyways let's just forget about me..it's your & day your bday..and yet again i'm definetly more excited than you for this day.  
+            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you're might be angry or too happy to express your feelings..you'll be probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually don't have a lot of time to learn. this was all which i knew! anyways let's just forget about me..it's your day & your bday..and yet again i'm definetly more excited than you for this day.  
         </p>
-    </body>
+        <p>
+            22 years back on this day you were born and surely 
+                </body>
 </html>
