--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,9 @@
             <div style="text-align : right; text-family : Arial">
                 <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click here</a>
                 </div>
+                <sript>
+                    alert('open it open it open it!!:P');
+                </sript>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
