[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
                 <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click here</a>
                 </div>
                 <script>
-                    alert('open it open it open it!! i'm too excited');
+                    alert('open it open it open it. i am so excited :D');
                 </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
