--- a/ui/index.html
+++ b/ui/index.html
@@ -13,11 +13,10 @@
         <div style= " color: black ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
-            <div style="text-align : right; text-family : Arial">
-                <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click here</a>
-                </div>
+            
                 <footer>
-                    click me!
+                                    <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click me!</a>
+
                 </footer>
                 <script>
                     alert('open it open it open it. i am so excited :D');
