[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
         <div style= " color: black ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
+            <div>
+                "May your birthday and every day be filled with the warmth of sunshine, the happiness of smiles, the sounds of laughter, the feeling of love and the sharing of good cheer. "
+            </div>
             
                 <footer>
                                     <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click me!</a>
