[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,12 @@
         <div style= " color: black ; font size: 40px" class="center text-big italic" >
             happy birthday my love!!
             </div>
-            <div>
-                "May your birthday and every day be filled with the warmth of sunshine, the happiness of smiles, the sounds of laughter, the feeling of love and the sharing of good cheer. "
+            <div style="color:black ; font-size: 30px; font-family: italic; text-align:left">
+                "May your birthday and every day be filled with the warmth of sunshine, the happiness of smiles, the sounds of laughter, the feeling of love and the sharing of good cheer.I hope your special day will bring you lots of happiness, love and fun. You deserve them a lot.you need to float with lots of smiles on your face as you're being the best!! I wish that life brings you a beautiful surprise for every candle on your bday cake!
+                enjoy your b'day to the fullest man!"
+
+
+ "
             </div>
             
                 <footer>
