--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,9 +9,16 @@
                 </div>
 
         <p style ="color:black ; font-size: 40px; text-aign:left ; font-family: cursive">
-            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you're might be angry or too happy to express your feelings..you'll be probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually don't have a lot of time to learn. this was all which i knew! anyways let's just forget about me..it's your day & your bday..and yet again i'm definetly more excited than you for this day.  
+            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you're might be angry or too happy to express your feelings..you'll be probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking it's definetly not gonna be sober that way!) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually don't have a lot of time to learn. this was all which i knew! anyways let's just forget about me..it's your day & your bday..and yet again i'm definetly more excited than you for this day.  
         </p>
         <p>
-            22 years back on this day you were born and surely 
-                </body>
+               <Ol>Sone fun facts about you!
+                   <li>you're actually a lot hotter than you think</li>
+                   <li>your this smile on your face makes me go crazy for you</li>
+                   <li>you just hate shownig off to people what you have</li>
+                   <li>definetly not a fan of changing dp and status frequntly</li>
+                   <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot)</li>
+                   <li>you hate beg bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
+                   </ol>
+                   </body>
 </html>
