[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -18,7 +18,7 @@
                    <li>you just hate shownig off to people what you have</li>
                    <li>definetly not a fan of changing dp and status frequntly</li>
                    <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot)</li>
-                   <li>you hate beg bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
+                   <li>you hate bed bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
                    </ol>
                    </body>
 </html>
