[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -1,2 +1,5 @@
 <html>
-</html>
+    <body> 
+    <img src="http://media-cache-ec0.pinimg.com/736x/f5/ec/12/f5ec1253554238f6e964f31efc646e3f.jpg" />
+    </body>
+    </html>
