[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -1,5 +1,14 @@
 <html>
-    <body> 
+    <head>
+        <title>Just have a big smile as this always</title>
+        
+    </head>
+    
+    <body>
+        <div>
+            some crazy stuff i found for you!!
+        </div> 
+        <hr />
     <img src="https://media.giphy.com/media/3o6gb9uoUYzNwpqgpO/giphy.gif" />
     </body>
     </html>
