--- a/ui/videos.html
+++ b/ui/videos.html
@@ -10,5 +10,7 @@
         </div> 
         <hr />
     <img src="https://media.giphy.com/media/3o6gb9uoUYzNwpqgpO/giphy.gif" />
+    <img src="https://media.giphy.com/media/3o7qDE31B2gsTCn98A/giphy.gif" />
+    <img src="https://media.giphy.com/media/3oEduRTWV6VB6LH8lO/giphy.gif" />
     </body>
     </html>
