[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -20,7 +20,7 @@
                    <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot)</li>
                    <li>you hate bed bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
                    </ol>
-                   <footer font-size:20px;text-align: right; font-family: italic>
+                   <footer style="font-size:20px;text-align: right; font-family: italic">
                              <a href="http://krishnavyas9.imad.hasura-app.io/videos">again click me!!</a>
                    </footer>
                    </body>
