[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -12,5 +12,6 @@
     <img src="https://media.giphy.com/media/3o6gb9uoUYzNwpqgpO/giphy.gif" />
     <img src="https://media.giphy.com/media/3o7qDE31B2gsTCn98A/giphy.gif" />
     <img src="https://media.giphy.com/media/3oEduRTWV6VB6LH8lO/giphy.gif" />
+    <img src="https://media.giphy.com/media/cROwFEvVvhNG8/giphy.gif" />
     </body>
     </html>
