[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <div>
+        <div font-size: 40px: color:black background-color: lightgrey>
             some crazy stuff i found for you!!
         </div> 
         <hr />
