--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,7 +9,7 @@
                 </div>
 
         <p style ="color:black ; font-size: 40px; text-aign:left ; font-family: cursive">
-            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you're might be angry or too happy to express your feelings..you'll be probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking it's definetly not gonna be sober that way!) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually don't have a lot of time to learn. this was all which i knew! anyways let's just forget about me..it's your day & your bday..and yet again i'm definetly more excited than you for this day.  
+            hey baby! i know i'm telling this like 100th time but once again wishing you the happiest birthday ever! i know you'll might be angry or too happy to express your feelings..you'll be probably hating me too for doing all this but it's just that i couldn't let your birthday be so sober (sober in the sense without any surprises :p not the way you're thinking. it's definetly not gonna be sober that way!) and now see your girlfriend can actually make a website :D by the way this is just a starter pack i wanted to do a lot better than this but i actually didn't had a lot of time to learn. this was all which i knew! anyways let's just forget about me..it's your day & your bday..and yet again i'm definetly more excited than you for this day.  
         </p>
         <p>
                <Ol STYLE="font-size: 40px; font-family:cursive;text-align: left">Some fun facts about you!
@@ -20,6 +20,11 @@
                    <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot)</li>
                    <li>you hate bed bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
                    </ol>
+                   <div style ="color:black ; font-size: 40px; text-aign:left ; font-family: cursive">
+>
+                       on this special occasion i just wanna tell you that seriously i love you a lot bachaaa!! I know we've fought a lot from couple of months but i guess that's what happens when you start looking uglier :P just kidding you look as handsome as you were back then when you were in india, in fact i should say more sexy!! won't bring up all thoes fights and stuff today as you'll be totally enjoying your day, other than work hours! i don't know what i'm gonna make for you on your next birthday..like last time video than this..be aware i could even come to canada just to give you surprise on your next birthday :P you might be having many doubts in your mind but don't worry no one can see this website untill i share the URL.so no one's gonna see this stuff.i guess this website is gonna work till saturday or something! so you'll be on website till that :P just a one more page and then you're free to do your work! i hope you'll like it as much as you like me :P anyways you've done a lot reading time for some fun stuff..
+                       </div>
+                   
                    <footer style="font-size:20px;text-align: right; font-family: italic">
                              <a href="http://krishnavyas9.imad.hasura-app.io/videos">again click me!!</a>
                    </footer>
