[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <div font-size: 40px: color:black background-color: lightgrey>
+        <div font-size: 60px: color:black background-color: lightgrey>
             some crazy stuff i found for you!!
         </div> 
         <hr />
@@ -13,5 +13,6 @@
     <img src="https://media.giphy.com/media/3o7qDE31B2gsTCn98A/giphy.gif" />
     <img src="https://media.giphy.com/media/3oEduRTWV6VB6LH8lO/giphy.gif" />
     <img src="https://media.giphy.com/media/cROwFEvVvhNG8/giphy.gif" />
+    <img scr="https://media.giphy.com/media/jxTnOS8Mkv8n6/giphy.gif" />
     </body>
     </html>
