--- a/ui/videos.html
+++ b/ui/videos.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <div font-size: 60px: color:black background-color: lightgrey>
+        <div style="font-size:60px;background-color: lightgrey; font-family: Arabic">
             some crazy stuff i found for you!!
         </div> 
         <hr />
