[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -14,5 +14,7 @@
     <img src="https://media.giphy.com/media/3oEduRTWV6VB6LH8lO/giphy.gif" />
     <img src="https://media.giphy.com/media/cROwFEvVvhNG8/giphy.gif" />
     <img scr="https://media.giphy.com/media/jxTnOS8Mkv8n6/giphy.gif" />
+    <img scr="https://media2.giphy.com/media/rA49S6JQFc7cc/200.gif#18"/>
+    <img scr="https://media4.giphy.com/media/kJLOin5OUi6uQ/200.gif#24" />
     </body>
     </html>
