[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -17,8 +17,8 @@
                    <li>your this smile on your face makes me go crazy for you</li>
                    <li>you just hate shownig off to people what you have</li>
                    <li>definetly not a fan of changing dp and status frequntly</li>
-                   <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot)</li>
-                   <li>you hate bed bugs(omg! you go mad after that!!),ketchup(alone i guess!),and sometimes me too!</li>
+                   <li>You like F1,all indian festivals,pizza mostly all eating stuff,milk(a lot),flowers</li>
+                   <li>you hate bed bugs(omg! you go mad after that!!),ketchup(alone i guess!),beign a romantic guy!,and sometimes me too!</li>
                    </ol>
                    <div style ="color:black ; font-size: 40px; text-aign:left ; font-family: cursive">
 >
