[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -16,5 +16,10 @@
     <img scr="https://media.giphy.com/media/jxTnOS8Mkv8n6/giphy.gif" />
     <img scr="https://media2.giphy.com/media/rA49S6JQFc7cc/200.gif#18"/>
     <img scr="https://media4.giphy.com/media/kJLOin5OUi6uQ/200.gif#24" />
+    <hr />
+    <div style="background-color: lightgrey;font-family:sans-serif ; font-size: 60px">
+         So that's it i hope you've liked it! don't actually have a comment section here so text me how much you liked it:P was just a lame try of making an actual website.anyways a lot of time you've spent reading all these so go out there and enjoy your day.even if you're angry save it for tomorrow i dont wanna see anything on your face expect a big smile !! chalo enjoy your day and have fun!
+        <span style="color:red;font-family: cursive ;font-size : 80px"> lots of lovee!!!!</span>
+        </div>
     </body>
     </html>
