--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -25,7 +25,7 @@
                        on this special occasion i just wanna tell you that seriously i love you a lot bachaaa!! I know we've fought a lot from couple of months but i guess that's what happens when you start looking uglier :P just kidding you look as handsome as you were back then when you were in india, in fact i should say more sexy!! won't bring up all thoes fights and stuff today as you'll be totally enjoying your day, other than work hours! i don't know what i'm gonna make for you on your next birthday..like last time video than this..be aware i could even come to canada just to give you surprise on your next birthday :P you might be having many doubts in your mind but don't worry no one can see this website untill i share the URL.so no one's gonna see this stuff.i guess this website is gonna work till saturday or something! so you'll be on website till that :P just a one more page and then you're free to do your work! i hope you'll like it as much as you like me :P anyways you've done a lot reading time for some fun stuff..
                        </div>
                    
-                   <footer style="font-size:20px;text-align: right; font-family: italic">
+                   <footer style="font-size:60px;text-align: right; font-family: italic bold">
                              <a href="http://krishnavyas9.imad.hasura-app.io/videos">again click me!!</a>
                    </footer>
                    </body>
