[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,34 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title> Bon anniversaire </title>
+        <title> krishna vyas | profile </title>
 
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="http://cdn3.volusion.com/rccqg.lrbyh/v/vspfiles/photos/BQPKCN10-2.jpg?1455343631"/>
-        </div>
-        <br>
-        <div style= " color: black ; font size: 40px" class="center text-big italic" >
-            happy birthday my love!!
-            </div>
-            <div style="color:black ; font-size: 30px; font-family: italic; text-align:left">
-                "May your birthday and every day be filled with the warmth of sunshine, the happiness of smiles, the sounds of laughter, the feeling of love and the sharing of good cheer.I hope your special day will bring you lots of happiness, love and fun. You deserve them a lot.you need to float with lots of smiles on your face as you're being the best!! I wish that life brings you a beautiful surprise for every candle on your bday cake!
-                enjoy your b'day to the fullest babe
-
-
- "
-            </div>
-            
-                <footer>
-                                    <a href="http://krishnavyas9.imad.hasura-app.io/article-one">click me!</a>
-
-                </footer>
-                <script>
-                    alert('open it open it open it. i am so excited :D');
-                </script>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        <
+        
     </body>
 </html>
