[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s150x150/14156208_515330478675204_2076940717_a.jpg" />
+        <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s150x150/14156208_515330478675204_2076940717_a.jpg" alt="it's me!" style="width:190px;height:180px" />
         <hr />
         <div>
             welcome to traveller's page ;)
