--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <body>
         <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s150x150/14156208_515330478675204_2076940717_a.jpg" alt="it's me!" style="width:500px;height:500px" />
         <hr />
-        <div font-family:cursuive; color:black; font-size:60px >
+        <div style="font-family:cursuive; color:black; font-size:60px" >
             welcome to traveller's page ;)
             </div>
              
