[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s150x150/14156208_515330478675204_2076940717_a.jpg" alt="it's me!" style="width:500px;height:500px" />
         <hr />
         <div style="font-family:cursuive; color:black; font-size:60px" >
-            welcome to traveller's page ;)
+            welcome to my webapp!! ;)
             </div>
              
     </body>
