[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-19/s150x150/14156208_515330478675204_2076940717_a.jpg" alt="it's me!" style="width:500px;height:500px" />
+        <img src="https://pbs.twimg.com/profile_images/580699695770673152/9kutiIee_bigger.jpg" alt="it's me!" style="width:500px;height:500px" />
         
         <div style="font-family:cursuive; color:black; font-size:60px" >
             welcome to my webapp!! ;)
