[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,10 +5,12 @@
 
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-    <body>
-        <img src="https://pbs.twimg.com/profile_images/580699695770673152/9kutiIee_bigger.jpg" alt="it's me!" style="width:500px;height:500px" />
-        
-        <div style="font-family:cursuive; color:black; font-size:60px" >
+    <body >
+        <div class="center">
+          <img src="https://pbs.twimg.com/profile_images/580699695770673152/9kutiIee_bigger.jpg" class="img-medium"/>
+    </div>
+    <br/>
+            <div>
             welcome to my webapp!! ;)
             </div>
              
