[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body >
-        <div class="center">
+        <div class="right">
           <img src="https://pbs.twimg.com/profile_images/580699695770673152/9kutiIee_bigger.jpg" class="img-medium"/>
     </div>
     <br/>
